--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4438,5 +4438,87 @@
     "CL_DV_OV_night_mode_setting_desc": "निर्धारित रात्रि के समय दिनचर्या के दौरान स्क्रीन और/या प्रकाश की चमक को कम करें।",
     "CL_DV_OV_door_lock_setting_desc": "दरवाज़ा लॉक चालू करने से आपके ओवन का दरवाज़ा लॉक हो जाएगा।",
     "CL_CF_FM_one_day_left": "1 दिन छोड़ा",
-    "CL_CF_FM_x_item_selected": "*** आइटम चयनित"
+    "CL_CF_FM_x_item_selected": "*** आइटम चयनित",
+    "CL_SL_CM_progam_send_warning": "क्षमा करें, प्रोग्राम नहीं भेजा जा सकता, कृपया अपना डिवाइस चालू करें और रिमोट खोलें और पुनः प्रयास करें।",
+    "CL_SL_CM_progam_start_warning": "क्षमा करें, प्रोग्राम प्रारंभ नहीं हो सकता, कृपया अपना डिवाइस चालू करें और रिमोट खोलें और पुनः प्रयास करें।",
+    "CL_SL_CM_progam_sent_successfully": "कार्यक्रम सफलतापूर्वक भेजा गया!",
+    "CL_SL_CM_select_device_desc": "कृपया उपयोग किये जाने वाले उपकरण का चयन करें।",
+    "CL_DV_WM_Detergent_In_Use_key": "डिटर्जेंट का उपयोग",
+    "CL_DV_RF_cleaning_mode": "सफाई मोड",
+    "CL_DV_RF_holiday_mode": "अवकाश मोड",
+    "CL_DV_RF_party_mode": "पार्टी मोड",
+    "w_i_connect_scenario": "कनेक्टलाइफ परिदृश्य क्या है?",
+    "w_i_smart_energy": "स्मार्ट ऊर्जा क्या है?",
+    "smart_energy_l_m": "स्मार्ट एनर्जी की प्रमुख विशेषताओं के बारे में अधिक जानें",
+    "w_i_air_care": "एयर केयर क्या है?",
+    "air_care_l_m": "एयर केयर की प्रमुख विशेषताओं के बारे में अधिक जानें",
+    "w_i_smart_laundry": "स्मार्ट लॉन्ड्री क्या है?",
+    "smart_laundry_l_m": "स्मार्ट लॉन्ड्री की प्रमुख विशेषताओं के बारे में अधिक जानें",
+    "w_i_smart_kitchen": "स्मार्ट किचन क्या है?",
+    "smart_kitchen_l_m": "स्मार्ट किचन की प्रमुख विशेषताओं के बारे में अधिक जानें",
+    "w_i_smart_support": "स्मार्ट सपोर्ट क्या है?",
+    "smart_support_l_m": "स्मार्ट सपोर्ट की प्रमुख विशेषताओं के बारे में अधिक जानें",
+    "smart_energy_helps": "स्मार्ट एनर्जी आपको उपकरणों की निगरानी करने और उन्हें ऊर्जा कुशल स्थिति में रखने में मदद करती है",
+    "smart_energy_helps_1": "1.वन-क्लिक इको",
+    "smart_energy_helps_1_content": "अपने उपकरणों का सक्रिय ECO मोड। डिवाइस ऊर्जा खपत का सांख्यिकीय विश्लेषण करें। ऊर्जा बचत डेटा की निगरानी करें और ऊर्जा उपयोग लक्ष्य निर्धारित करें।",
+    "smart_energy_helps_2": "2.ऊर्जा खपत निगरानी",
+    "smart_energy_helps_2_content": "दैनिक, मासिक और वार्षिक आधार पर पूरे घर की बिजली और पानी की खपत की गणना करें। आप व्यक्तिगत उपकरणों की खपत के आंकड़े, चयनित अवधि के भीतर प्रत्येक उपकरण की ऊर्जा खपत का अनुपात, समग्र और व्यक्तिगत ऊर्जा खपत भी देख सकते हैं।",
+    "smart_energy_helps_3": "3.ऊर्जा सहायक",
+    "smart_energy_helps_3_content": "ऊर्जा-बचत लक्ष्य निर्धारित करें, तथा निर्धारित लक्ष्य मान प्राप्त होने पर उपयोगकर्ताओं को सूचनाएं भेजें।",
+    "air_care_helps": "एयर केयर का उद्देश्य पूरे घर में तापमान, आर्द्रता और हवा के बुद्धिमान नियंत्रण को हल करना है",
+    "air_care_helps_1": "1.वायु मूल्यांकन",
+    "air_care_helps_1_content": "प्रत्येक कमरे के तापमान और आर्द्रता की स्थिति की वास्तविक समय में निगरानी करें, तथा वायु की स्थिति के आधार पर आरामदायक मूल्यांकन और अनुस्मारक प्रदान करें",
+    "air_care_helps_2": "2.एक-क्लिक अनुकूलन",
+    "air_care_helps_2_content": "अनुकूलन एक क्लिक से शुरू किया जा सकता है। हम पाँच अलग-अलग अनुकूलन योजनाएँ प्रदान करते हैं। प्रत्येक अनुकूलन मोड को उपयोगकर्ता की ज़रूरतों के अनुसार समायोजित किया जा सकता है, जिससे उपयोगकर्ताओं को अनुकूलित अनुकूलन समाधान मिल सके।",
+    "air_care_helps_3": "3.3D कक्ष दृश्य",
+    "air_care_helps_3_content": "अपने घर के विस्तृत 3D विज़ुअलाइज़ेशन के माध्यम से अपने कमरे की स्थिति और उपकरणों पर नज़र रखें।",
+    "smart_laundry_key": "स्मार्ट लॉन्ड्री",
+    "smart_laundry_helps": "स्मार्ट लॉन्ड्री विशेषज्ञ धुलाई युक्तियाँ, एक सहज लॉन्ड्री सहायक और निर्बाध डिटर्जेंट प्रबंधन प्रदान करता है, जो एक अद्वितीय कपड़े धोने का अनुभव सुनिश्चित करता है",
+    "smart_laundry_helps_1": "1. अनुकूलित कपड़े धोने",
+    "smart_laundry_helps_1_content": "उपयोगकर्ता प्रोफाइल और प्राथमिकताओं के आधार पर वैयक्तिकृत साइकिलें, जिनमें विभिन्न मौसमों, बाहरी गतिविधियों, शिशु देखभाल आदि के लिए टैग शामिल हैं।",
+    "smart_laundry_helps_2": "2.डिटर्जेंट प्रबंधन",
+    "smart_laundry_helps_2_content": "स्मार्ट होम लॉन्ड्री असिस्टेंट के साथ अपने कपड़े धोने की दिनचर्या को अनुकूलित करें, स्वचालित रूप से डिटर्जेंट ब्रांडों को पहचानें और अपनी वॉशिंग मशीन में खुराक का प्रबंधन करें।",
+    "smart_laundry_helps_3": "3.लॉन्ड्री उपयोग रिपोर्ट",
+    "smart_laundry_helps_3_content": "उपयोगकर्ता द्वारा कपड़े धोने के कार्यक्रम के उपयोग के साथ-साथ महीने के पानी और बिजली के उपयोग और ड्रम की सफाई पर साप्ताहिक, मासिक और वार्षिक रिपोर्ट प्रदर्शित करता है।",
+    "smart_kitchen_key": "स्मार्ट किचन",
+    "smart_kitchen_helps": "स्मार्ट किचन आपको एक अभूतपूर्व बुद्धिमान खाना पकाने का अनुभव प्रदान करता है, जिसमें बुद्धिमान व्यंजन, वाइन पेयरिंग, रेसिपी सहायक और सामग्री, वाइन और पेय प्रबंधन शामिल है",
+    "smart_kitchen_helps_1": "1.शेफ रेसिपी",
+    "smart_kitchen_helps_1_content": "विभिन्न ओवन में पकाए जाने पर अद्वितीय स्वादों में मास्टर व्यंजनों का अनुभव करें, जो केवल एक क्लिक के साथ नुस्खा के खाना पकाने के निर्देशों का पालन करते हैं।",
+    "smart_kitchen_helps_2": "2.रेसिपी सहायक",
+    "smart_kitchen_helps_2_content": "पोषण, व्यंजन, जीवनशैली और एलर्जी सहित अपनी व्यक्तिगत प्राथमिकताओं के आधार पर व्यंजनों को अनुकूलित और तैयार करें।",
+    "smart_kitchen_helps_3": "3.खाद्य प्रबंधन",
+    "smart_kitchen_helps_3_content": "अक्सर इस्तेमाल होने वाली सामग्री का विवरण जैसे कि समाप्ति तिथि आदि जोड़ें और देखें। उपयुक्त खाद्य व्यंजनों का तुरंत मिलान करें और खरीदारी सूची में गुम सामग्री भेजें।",
+    "smart_kitchen_helps_4": "पेय प्रबंधन",
+    "smart_kitchen_helps_4_content": "पेय जोड़ें और पीने की सूची बनाएं, प्रत्येक संग्रहीत पेय की विस्तृत जानकारी देखें।",
+    "smart_kitchen_helps_5": "शराब सूची",
+    "smart_kitchen_helps_5_content": "VIvino द्वारा वाइन सेलर सूची बनाने के लिए स्कैन करें, इष्टतम पीने की अवधि के लिए अनुस्मारक सेट करें और वाइन के प्रकार के आधार पर भोजन की जोड़ी की सिफारिश करें।",
+    "smart_kitchen_helps_6": "6. खरीदारी सूची",
+    "smart_kitchen_helps_6_content": "रेसिपी के आधार पर खरीदारी की सूची बनाएं, उन वस्तुओं को चिह्नित करें जो आपके पास पहले से हैं और जिन्हें आपने खरीदारी के संदर्भ के रूप में खरीदा है।",
+    "smart_support_key": "स्मार्ट सपोर्ट",
+    "smart_support_helps": "स्मार्ट सपोर्ट आपके डिवाइस के लिए व्यापक सहायता प्रदान करता है। आप दैनिक रखरखाव के लिए सफाई और देखभाल संबंधी सुझाव प्राप्त कर सकते हैं, अपने सभी डिवाइस की स्थिति की जांच करने के लिए एक-क्लिक सेल्फ-डायग्नोस्टिक और किसी भी असामान्य संचालन के लिए संभावित समाधान प्रदान कर सकते हैं",
+    "smart_support_helps_1": "1.सफाई और रखरखाव युक्तियाँ",
+    "smart_support_helps_1_content": "उत्पाद की दैनिक सफाई और रखरखाव के लिए सुझाव दें।",
+    "smart_support_helps_2": "2.एक क्लिक से स्वयं निदान",
+    "smart_support_helps_2_content": "सभी घरेलू उपकरणों की स्थिति जानने के लिए एक-क्लिक स्व-निरीक्षण। जब कोई समस्या पाई जाती है, तो सुझाए गए समाधान प्रदान करें।",
+    "smart_support_helps_3": "समस्या निवारण",
+    "smart_support_helps_3_content": "जब डिवाइस में कोई समस्या आती है, तो उपयोगकर्ता स्वयं सहायता कर सकते हैं, समस्या निवारण कर सकते हैं और दोष गाइड के अनुसार समस्या को हल कर सकते हैं।",
+    "smart_support_helps_4": "4.समस्या की रिपोर्ट करें",
+    "smart_support_helps_4_content": "यदि ऐप या उत्पाद के उपयोग में कोई समस्या है, तो उपयोगकर्ता कॉल सेंटर के साथ संचार समय को कम करने के लिए ऑनलाइन फीडबैक दे सकते हैं।",
+    "smart_support_helps_5": "5.हमसे संपर्क करें",
+    "smart_support_helps_5_content": "उपयोगकर्ता हमसे फोन, ईमेल और आधिकारिक वेबसाइट के माध्यम से संपर्क कर सकते हैं।",
+    "block_key": "अवरोध पैदा करना",
+    "guide_tips_device_1": "यह <b> नया होमपेज टैब है. </b>",
+    "guide_tips_device_2": "आप ऑर्डर को संपादित करने, दिखाने या छिपाने के लिए \" : \" पर क्लिक कर सकते हैं।",
+    "guide_tips_device_3": "आप कार्ड को हटाने या संपादित करने के लिए उसे देर तक दबा सकते हैं।",
+    "guide_tips_device_4": "आप <b> अनुकूलित परिदृश्य कार्ड का अनुभव कर सकते हैं. </b>",
+    "guide_tips_device_5": "आप होम टैब सेटिंग को मेनू पेज पर <b> अपीयरेंस कस्टमाइज़ करें </b> पर पा सकते हैं",
+    "guide_tips_1": "कनेक्टलाइफ ने <b> पांच परिदृश्य लॉन्च किए हैं। </b>",
+    "guide_tips_2": "आप अनुभागों के क्रम को संपादित करने के लिए \":\" पर क्लिक कर सकते हैं",
+    "guide_tips_3": "आप मुखपृष्ठ पर अनुभागों का क्रम बदलने के लिए \"=\" को खींच सकते हैं।",
+    "c_your_device": "अपने डिवाइस\n कनेक्ट करें",
+    "a_ex_new_way": "और स्मार्ट जीवन जीने का एक नया तरीका अनुभव करें।",
+    "my_place": "मेरा स्थान",
+    "home_tab": "होमपेज टैब",
+    "home_tab_content": "होम पेज के शीर्ष पर परिदृश्य टैब दिखाएं या छिपाएं",
+    "CL_DV_RF_extras": "अतिरिक्त"
 }
