--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4438,5 +4438,87 @@
     "CL_DV_OV_night_mode_setting_desc": "Kurangi kecerahan layar dan/atau cahaya selama jam-jam malam yang terjadwal.",
     "CL_DV_OV_door_lock_setting_desc": "Menyalakan kunci pintu akan mengunci pintu oven Anda.",
     "CL_CF_FM_one_day_left": "Sisa 1 hari",
-    "CL_CF_FM_x_item_selected": "*** item dipilih"
+    "CL_CF_FM_x_item_selected": "*** item dipilih",
+    "CL_SL_CM_progam_send_warning": "Maaf, program tidak dapat mengirim, silakan hidupkan perangkat Anda dan buka remote dan coba lagi.",
+    "CL_SL_CM_progam_start_warning": "Maaf, program tidak dapat dimulai, silakan hidupkan perangkat Anda dan buka remote dan coba lagi.",
+    "CL_SL_CM_progam_sent_successfully": "Program berhasil dikirim!",
+    "CL_SL_CM_select_device_desc": "Silakan pilih perangkat yang akan digunakan.",
+    "CL_DV_WM_Detergent_In_Use_key": "Deterjen yang Digunakan",
+    "CL_DV_RF_cleaning_mode": "Mode pembersihan",
+    "CL_DV_RF_holiday_mode": "Mode liburan",
+    "CL_DV_RF_party_mode": "Mode pesta",
+    "w_i_connect_scenario": "Apa itu skenario ConnectLife",
+    "w_i_smart_energy": "Apa itu Energi Cerdas",
+    "smart_energy_l_m": "Pelajari lebih lanjut tentang fitur utama Smart Energy",
+    "w_i_air_care": "Apa itu Air Care",
+    "air_care_l_m": "Pelajari lebih lanjut tentang fitur utama Air Care",
+    "w_i_smart_laundry": "Apa itu Smart Laundry",
+    "smart_laundry_l_m": "Pelajari lebih lanjut tentang fitur utama Smart Laundry",
+    "w_i_smart_kitchen": "Apa itu Dapur Pintar",
+    "smart_kitchen_l_m": "Pelajari lebih lanjut tentang fitur utama Smart Kitchen",
+    "w_i_smart_support": "Apa itu Smart Support?",
+    "smart_support_l_m": "Pelajari lebih lanjut tentang fitur utama Smart Support",
+    "smart_energy_helps": "Energi Cerdas membantu Anda memantau dan menjaga perangkat dalam kondisi hemat energi",
+    "smart_energy_helps_1": "1.Ekonomi Satu Klik",
+    "smart_energy_helps_1_content": "Mode ECO aktif pada peralatan Anda. Analisis konsumsi energi perangkat secara statistik. Pantau data penghematan energi dan Tetapkan target penggunaan energi.",
+    "smart_energy_helps_2": "2. Pemantauan Konsumsi Energi",
+    "smart_energy_helps_2_content": "Hitung konsumsi daya dan air seluruh rumah setiap hari, setiap bulan, dan setiap tahun. Anda juga dapat melihat statistik konsumsi masing-masing perangkat, proporsi konsumsi energi setiap perangkat dalam periode yang dipilih, serta konsumsi energi keseluruhan dan masing-masing perangkat.",
+    "smart_energy_helps_3": "3. Asisten Energi",
+    "smart_energy_helps_3_content": "Tetapkan sasaran penghematan energi, dan kirimkan pemberitahuan kepada pengguna saat nilai target yang ditetapkan tercapai.",
+    "air_care_helps": "Perawatan udara bertujuan untuk memecahkan kontrol cerdas suhu, kelembaban dan udara di seluruh rumah",
+    "air_care_helps_1": "1. Evaluasi Udara",
+    "air_care_helps_1_content": "Memantau status suhu dan kelembaban setiap ruangan secara real time, dan memberikan evaluasi kenyamanan dan pengingat berdasarkan kondisi udara",
+    "air_care_helps_2": "2. Optimasi Satu Klik",
+    "air_care_helps_2_content": "Pengoptimalan dapat dimulai dengan satu klik. Kami menyediakan lima skema pengoptimalan yang berbeda. Setiap mode pengoptimalan dapat disesuaikan menurut kebutuhan pengguna, sehingga memberikan solusi pengoptimalan yang disesuaikan bagi pengguna.",
+    "air_care_helps_3": "Tampilan Ruangan 3.3D",
+    "air_care_helps_3_content": "Pantau kondisi kamar dan peralatan Anda melalui visualisasi 3D rumah Anda yang terperinci.",
+    "smart_laundry_key": "Pencucian Cerdas",
+    "smart_laundry_helps": "Smart Laundry menawarkan tips mencuci dari ahlinya, asisten binatu yang intuitif, dan manajemen deterjen yang lancar, memastikan pengalaman mencuci yang tak tertandingi",
+    "smart_laundry_helps_1": "1.Pencucian yang Disesuaikan",
+    "smart_laundry_helps_1_content": "Siklus yang dipersonalisasi berdasarkan profil dan preferensi pengguna, dengan tag untuk berbagai musim, aktivitas luar ruangan, perawatan bayi, dan banyak lagi.",
+    "smart_laundry_helps_2": "2. Manajemen Deterjen",
+    "smart_laundry_helps_2_content": "Optimalkan rutinitas mencuci Anda dengan Smart Home Laundry Assistant, kenali merek deterjen secara otomatis dan kelola dosis di mesin cuci Anda.",
+    "smart_laundry_helps_3": "3.Laporan Penggunaan Binatu",
+    "smart_laundry_helps_3_content": "Menampilkan laporan mingguan, bulanan, dan tahunan tentang penggunaan program binatu oleh pengguna, serta penggunaan air dan listrik serta pembersihan tabung pada bulan tersebut.",
+    "smart_kitchen_key": "Dapur Pintar",
+    "smart_kitchen_helps": "Dapur Pintar memberi Anda pengalaman memasak cerdas yang belum pernah ada sebelumnya, termasuk resep cerdas, pasangan anggur, asisten resep, dan manajemen bahan, anggur, dan minuman.",
+    "smart_kitchen_helps_1": "1. Resep koki",
+    "smart_kitchen_helps_1_content": "Nikmati resep-resep master dengan cita rasa unik saat dimasak di oven berbeda, yang mengikuti petunjuk memasak resep hanya dengan satu klik.",
+    "smart_kitchen_helps_2": "2. Asisten Resep",
+    "smart_kitchen_helps_2_content": "Sesuaikan dan buat resep berdasarkan preferensi pribadi Anda termasuk nutrisi, masakan, gaya hidup, dan alergi.",
+    "smart_kitchen_helps_3": "3. Manajemen Makanan",
+    "smart_kitchen_helps_3_content": "Tambahkan dan lihat detail bahan yang sering digunakan seperti tanggal kedaluwarsa. Cocokkan resep makanan yang sesuai dengan cepat dan kirimkan bahan yang kurang ke daftar belanja.",
+    "smart_kitchen_helps_4": "Manajemen Minuman",
+    "smart_kitchen_helps_4_content": "Tambahkan minuman dan buat daftar minuman, lihat informasi terperinci setiap minuman yang disimpan.",
+    "smart_kitchen_helps_5": "Inventaris Anggur",
+    "smart_kitchen_helps_5_content": "Pindai untuk membuat daftar gudang anggur oleh VIvino, atur pengingat untuk periode minum yang optimal dan rekomendasikan pasangan makanan berdasarkan jenis anggur.",
+    "smart_kitchen_helps_6": "6.Daftar Belanja",
+    "smart_kitchen_helps_6_content": "Buat daftar belanja berdasarkan resep, tandai barang-barang yang sudah Anda miliki dan peroleh sebagai referensi belanja Anda.",
+    "smart_support_key": "Dukungan Cerdas",
+    "smart_support_helps": "Dukungan Cerdas menyediakan bantuan menyeluruh untuk perangkat Anda. Anda bisa mendapatkan tips pembersihan dan perawatan untuk perawatan harian, diagnostik mandiri satu klik untuk memeriksa status semua perangkat Anda, dan memberikan solusi yang memungkinkan untuk setiap operasi yang tidak normal.",
+    "smart_support_helps_1": "1.Tips Pembersihan dan Perawatan",
+    "smart_support_helps_1_content": "Berikan saran untuk pembersihan dan pemeliharaan produk setiap hari.",
+    "smart_support_helps_2": "2.Diagnosis mandiri satu klik",
+    "smart_support_helps_2_content": "Inspeksi mandiri satu klik untuk mengetahui status semua peralatan rumah tangga. Saat masalah terdeteksi, berikan solusi yang direkomendasikan.",
+    "smart_support_helps_3": "Penyelesaian masalah",
+    "smart_support_helps_3_content": "Saat perangkat bermasalah, pengguna dapat membantu sendiri, memecahkan masalah, dan menyelesaikan masalah sesuai panduan kesalahan.",
+    "smart_support_helps_4": "4.Laporkan Masalah",
+    "smart_support_helps_4_content": "Jika terjadi masalah dengan penggunaan APP atau produk, pengguna dapat memberikan umpan balik secara daring untuk mengurangi waktu komunikasi dengan pusat panggilan.",
+    "smart_support_helps_5": "5.Hubungi Kami",
+    "smart_support_helps_5_content": "Pengguna dapat menghubungi kami melalui telepon, email, dan situs web resmi.",
+    "block_key": "Memblokir",
+    "guide_tips_device_1": "Ini adalah <b> tab beranda baru. </b>",
+    "guide_tips_device_2": "Anda dapat mengeklik \" : \" untuk mengedit pesanan, menampilkan atau menyembunyikan.",
+    "guide_tips_device_3": "Anda dapat menekan kartu lama untuk menghapus atau mengeditnya.",
+    "guide_tips_device_4": "Anda dapat mencoba <b> kartu skenario yang disesuaikan. </b>",
+    "guide_tips_device_5": "Anda dapat menemukan pengaturan tab beranda di <b> sesuaikan tampilan </b> pada halaman menu",
+    "guide_tips_1": "ConnectLife telah meluncurkan <b> lima skenario. </b>",
+    "guide_tips_2": "Anda dapat mengklik \":\" untuk mengedit urutan bagian",
+    "guide_tips_3": "Anda dapat menyeret \"=\" untuk mengubah urutan bagian di beranda.",
+    "c_your_device": "Hubungkan\nperangkat Anda",
+    "a_ex_new_way": "dan mengalami cara baru untuk hidup cerdas.",
+    "my_place": "Tempatku",
+    "home_tab": "Tab Beranda",
+    "home_tab_content": "Tampilkan atau sembunyikan tab skenario di bagian atas halaman beranda",
+    "CL_DV_RF_extras": "Tambahan"
 }
