--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4438,5 +4438,87 @@
     "CL_DV_OV_night_mode_setting_desc": "Zmniejsz jasność ekranu i/lub oświetlenie w zaplanowanych godzinach nocnych.",
     "CL_DV_OV_door_lock_setting_desc": "Włączenie blokady drzwi spowoduje zablokowanie drzwi piekarnika.",
     "CL_CF_FM_one_day_left": "Pozostał 1 dzień",
-    "CL_CF_FM_x_item_selected": "*** wybrano pozycję"
+    "CL_CF_FM_x_item_selected": "*** wybrano pozycję",
+    "CL_SL_CM_progam_send_warning": "Niestety, program nie może wysłać. Włącz urządzenie, otwórz pilota i spróbuj ponownie.",
+    "CL_SL_CM_progam_start_warning": "Niestety, program nie może zostać uruchomiony. Włącz urządzenie, użyj pilota i spróbuj ponownie.",
+    "CL_SL_CM_progam_sent_successfully": "Program został wysłany pomyślnie!",
+    "CL_SL_CM_select_device_desc": "Proszę wybrać urządzenie, które ma być użyte.",
+    "CL_DV_WM_Detergent_In_Use_key": "Detergent w użyciu",
+    "CL_DV_RF_cleaning_mode": "Tryb czyszczenia",
+    "CL_DV_RF_holiday_mode": "Tryb wakacyjny",
+    "CL_DV_RF_party_mode": "Tryb imprezowy",
+    "w_i_connect_scenario": "Czym jest scenariusz ConnectLife",
+    "w_i_smart_energy": "Czym jest inteligentna energia",
+    "smart_energy_l_m": "Dowiedz się więcej o kluczowych cechach Smart Energy",
+    "w_i_air_care": "Czym jest Air Care",
+    "air_care_l_m": "Dowiedz się więcej o kluczowych cechach Air Care",
+    "w_i_smart_laundry": "Czym jest Smart Laundry",
+    "smart_laundry_l_m": "Dowiedz się więcej o kluczowych funkcjach Smart Laundry",
+    "w_i_smart_kitchen": "Czym jest Smart Kitchen",
+    "smart_kitchen_l_m": "Dowiedz się więcej o kluczowych funkcjach Smart Kitchen",
+    "w_i_smart_support": "Czym jest Smart Support",
+    "smart_support_l_m": "Dowiedz się więcej o kluczowych funkcjach Smart Support",
+    "smart_energy_helps": "Smart Energy pomaga monitorować i utrzymywać urządzenia w stanie energooszczędnym",
+    "smart_energy_helps_1": "1.Eko jednym kliknięciem",
+    "smart_energy_helps_1_content": "Aktywny tryb ECO Twoich urządzeń. Statystyczna analiza zużycia energii przez urządzenie. Monitorowanie danych o oszczędzaniu energii i ustawianie celu zużycia energii.",
+    "smart_energy_helps_2": "2.Monitorowanie zużycia energii",
+    "smart_energy_helps_2_content": "Oblicz zużycie energii elektrycznej i wody w całym domu w ujęciu dziennym, miesięcznym i rocznym. Możesz także przeglądać statystyki zużycia poszczególnych urządzeń, udział zużycia energii każdego urządzenia w wybranym okresie, a także całkowite i indywidualne zużycie energii.",
+    "smart_energy_helps_3": "3.Asystent energetyczny",
+    "smart_energy_helps_3_content": "Ustaw cele dotyczące oszczędzania energii i wysyłaj powiadomienia do użytkowników po osiągnięciu ustalonych wartości docelowych.",
+    "air_care_helps": "Air care ma na celu rozwiązanie problemu inteligentnej kontroli temperatury, wilgotności i powietrza w całym domu",
+    "air_care_helps_1": "1.Ocena powietrza",
+    "air_care_helps_1_content": "Monitoruj stan temperatury i wilgotności w każdym pomieszczeniu w czasie rzeczywistym oraz zapewnij ocenę komfortu i przypomnienia na podstawie stanu klimatyzacji",
+    "air_care_helps_2": "2. Optymalizacja jednym kliknięciem",
+    "air_care_helps_2_content": "Optymalizację można rozpocząć jednym kliknięciem. Oferujemy pięć różnych schematów optymalizacji. Każdy tryb optymalizacji można dostosować do potrzeb użytkownika, zapewniając użytkownikom dostosowane rozwiązania optymalizacyjne.",
+    "air_care_helps_3": "Widok pokoju 3.3D",
+    "air_care_helps_3_content": "Kontroluj stan pomieszczeń i sprzętów AGD dzięki szczegółowej wizualizacji 3D swojego domu.",
+    "smart_laundry_key": "Inteligentne pranie",
+    "smart_laundry_helps": "Smart Laundry oferuje fachowe porady dotyczące prania, intuicyjnego asystenta prania i bezproblemowe zarządzanie detergentami, zapewniając niezrównane doświadczenie prania",
+    "smart_laundry_helps_1": "1. Pralnia dostosowana do potrzeb klienta",
+    "smart_laundry_helps_1_content": "Spersonalizowane cykle oparte na profilach i preferencjach użytkowników, z tagami dotyczącymi różnych pór roku, aktywności na świeżym powietrzu, pielęgnacji dziecka i nie tylko.",
+    "smart_laundry_helps_2": "2. Zarządzanie detergentami",
+    "smart_laundry_helps_2_content": "Zoptymalizuj codzienne pranie dzięki aplikacji Smart Home Laundry Assistant, która automatycznie rozpoznaje marki detergentów i zarządza dozowaniem w pralce.",
+    "smart_laundry_helps_3": "3. Raport o użytkowaniu pralni",
+    "smart_laundry_helps_3_content": "Wyświetla tygodniowe, miesięczne i roczne raporty dotyczące korzystania przez użytkownika z programu prania, a także miesięczne zużycie wody i prądu oraz czyszczenie bębna.",
+    "smart_kitchen_key": "Inteligentna kuchnia",
+    "smart_kitchen_helps": "Smart Kitchen zapewnia niespotykane dotąd inteligentne doświadczenie kulinarne, w tym inteligentne przepisy, dobór win, asystentów przepisów oraz zarządzanie składnikami, winem i napojami",
+    "smart_kitchen_helps_1": "1.Przepis szefa kuchni",
+    "smart_kitchen_helps_1_content": "Odkryj wyjątkowe smaki przepisów mistrzów, gotowanych w różnych piekarnikach, które po prostu podążają za instrukcją przygotowania za pomocą jednego kliknięcia.",
+    "smart_kitchen_helps_2": "2.Asystent przepisów",
+    "smart_kitchen_helps_2_content": "Dostosuj i generuj przepisy w oparciu o swoje osobiste preferencje, biorąc pod uwagę odżywianie, kuchnię, styl życia i alergie.",
+    "smart_kitchen_helps_3": "3.Zarządzanie żywnością",
+    "smart_kitchen_helps_3_content": "Dodawaj i przeglądaj często używane szczegóły składników, takie jak data ważności. Szybko dopasuj odpowiednie przepisy kulinarne i wyślij brakujące składniki na listę zakupów.",
+    "smart_kitchen_helps_4": "Zarządzanie napojami",
+    "smart_kitchen_helps_4_content": "Dodawaj napoje i twórz listy napojów, przeglądaj szczegółowe informacje o każdym zapisanym napoju.",
+    "smart_kitchen_helps_5": "Wino spis",
+    "smart_kitchen_helps_5_content": "Zeskanuj, aby utworzyć listę win w piwnicy dzięki VIvino, ustaw przypomnienia o optymalnym czasie spożycia wina i zalecaj łączenie potraw z konkretnym rodzajem wina.",
+    "smart_kitchen_helps_6": "6. Lista zakupów",
+    "smart_kitchen_helps_6_content": "Wygeneruj listę zakupów na podstawie przepisu, zaznaczając produkty, które już posiadasz i które kupiłeś, jako punkty odniesienia w zakupach.",
+    "smart_support_key": "Inteligentne wsparcie",
+    "smart_support_helps": "Smart Support zapewnia kompleksową pomoc dla Twoich urządzeń. Możesz uzyskać wskazówki dotyczące czyszczenia i pielęgnacji w celu codziennej konserwacji, samodiagnostykę jednym kliknięciem, aby sprawdzić stan wszystkich urządzeń i zapewnić możliwe rozwiązania dla wszelkich nieprawidłowych operacji.",
+    "smart_support_helps_1": "1. Wskazówki dotyczące czyszczenia i konserwacji",
+    "smart_support_helps_1_content": "Podaj sugestie dotyczące codziennego czyszczenia i konserwacji produktu.",
+    "smart_support_helps_2": "2.Jedno kliknięcie samodiagnozy",
+    "smart_support_helps_2_content": "Samodzielna inspekcja jednym kliknięciem, aby poznać stan wszystkich urządzeń gospodarstwa domowego. Gdy zostanie wykryty problem, podaj zalecane rozwiązania.",
+    "smart_support_helps_3": "Rozwiązywanie problemów",
+    "smart_support_helps_3_content": "Gdy wystąpi problem z urządzeniem, użytkownicy mogą sami poszukać pomocy, zdiagnozować problem i rozwiązać go korzystając z przewodnika po usterkach.",
+    "smart_support_helps_4": "4. Zgłoś problem",
+    "smart_support_helps_4_content": "Jeśli wystąpią problemy z aplikacją lub użytkowaniem produktu, użytkownicy mogą zgłosić je online, co skróci czas kontaktu z centrum obsługi telefonicznej.",
+    "smart_support_helps_5": "5. Skontaktuj się z nami",
+    "smart_support_helps_5_content": "Użytkownicy mogą się z nami kontaktować telefonicznie, za pośrednictwem poczty elektronicznej oraz oficjalnej strony internetowej.",
+    "block_key": "Blok",
+    "guide_tips_device_1": "To jest <b> nowa zakładka strony głównej. </b>",
+    "guide_tips_device_2": "Możesz kliknąć „ : ”, aby edytować, pokazać lub ukryć zamówienie.",
+    "guide_tips_device_3": "Aby usunąć lub edytować kartę, możesz ją długo nacisnąć.",
+    "guide_tips_device_4": "Możesz zapoznać się z <b> dostosowanymi kartami scenariuszy. </b>",
+    "guide_tips_device_5": "Ustawienia karty głównej można znaleźć w <b> dostosuj wygląd </b> na stronie menu",
+    "guide_tips_1": "ConnectLife uruchomiło <b> pięć scenariuszy. </b>",
+    "guide_tips_2": "Możesz kliknąć „:”, aby edytować kolejność sekcji",
+    "guide_tips_3": "Możesz przeciągnąć „=”, aby zmienić kolejność sekcji na stronie głównej.",
+    "c_your_device": "Podłącz\nswoje urządzenia",
+    "a_ex_new_way": "i poznaj nowy sposób inteligentnego życia.",
+    "my_place": "Moje miejsce",
+    "home_tab": "Karta strony głównej",
+    "home_tab_content": "Pokaż lub ukryj kartę scenariuszy u góry strony głównej",
+    "CL_DV_RF_extras": "Dodatki"
 }
