--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -1042,7 +1042,7 @@
     "dry": "Suho",
     "level": "raven",
     "detergent": "Detergent",
-    "softener": "Mehčanje",
+    "softener": "Mehčalec",
     "pause": "PAVZA",
     "shut_down": "UGASNI",
     "wash_machine_will_be_shut_down": "Naprava se bo izklopila.",
@@ -4438,5 +4438,87 @@
     "CL_DV_OV_night_mode_setting_desc": "Zmanjšajte svetlost zaslona in/ali osvetlitev med načrtovanimi nočnimi urami.",
     "CL_DV_OV_door_lock_setting_desc": "Če vklopite zaklepanje vrat, se zaklenejo vrata vaše pečice.",
     "CL_CF_FM_one_day_left": "še 1 dan",
-    "CL_CF_FM_x_item_selected": "*** izbran artikel"
+    "CL_CF_FM_x_item_selected": "*** izbran artikel",
+    "CL_SL_CM_progam_send_warning": "Program žal ne more poslati, vklopite napravo in odprite daljinski upravljalnik ter poskusite znova.",
+    "CL_SL_CM_progam_start_warning": "Programa žal ni mogoče zagnati, vklopite napravo in odprite daljinski upravljalnik ter poskusite znova.",
+    "CL_SL_CM_progam_sent_successfully": "Program uspešno poslan!",
+    "CL_SL_CM_select_device_desc": "Izberite napravo, ki jo želite uporabiti.",
+    "CL_DV_WM_Detergent_In_Use_key": "Detergent v uporabi",
+    "CL_DV_RF_cleaning_mode": "Način čiščenja",
+    "CL_DV_RF_holiday_mode": "Počitniški način",
+    "CL_DV_RF_party_mode": "Zabavni način",
+    "w_i_connect_scenario": "Kaj je scenarij ConnectLife",
+    "w_i_smart_energy": "Kaj je pametna energija",
+    "smart_energy_l_m": "Izvedite več o ključnih funkcijah Smart Energy",
+    "w_i_air_care": "Kaj je Air Care",
+    "air_care_l_m": "Izvedite več o ključnih funkcijah Air Care",
+    "w_i_smart_laundry": "Kaj je Smart Laundry",
+    "smart_laundry_l_m": "Izvedite več o ključnih funkcijah Smart Laundry",
+    "w_i_smart_kitchen": "Kaj je pametna kuhinja",
+    "smart_kitchen_l_m": "Izvedite več o ključnih funkcijah Smart Kitchen",
+    "w_i_smart_support": "Kaj je pametna podpora",
+    "smart_support_l_m": "Izvedite več o ključnih funkcijah Smart Support",
+    "smart_energy_helps": "Smart Energy vam pomaga spremljati in ohranjati naprave v energijsko učinkovitem stanju",
+    "smart_energy_helps_1": "1.One-Click Eco",
+    "smart_energy_helps_1_content": "Aktiven ECO način vaših aparatov. Statistično analizirajte porabo energije naprave. Spremljajte podatke o varčevanju z energijo in nastavite ciljno porabo energije.",
+    "smart_energy_helps_2": "2. Spremljanje porabe energije",
+    "smart_energy_helps_2_content": "Izračunajte celotno hišno moč in porabo vode na dnevni, mesečni in letni osnovi. lahko si ogledate tudi statistiko porabe posameznih naprav, delež porabe energije posamezne naprave v izbranem obdobju, skupno in individualno porabo energije.",
+    "smart_energy_helps_3": "3. Energetski pomočnik",
+    "smart_energy_helps_3_content": "Postavite cilje varčevanja z energijo in pošljite obvestila uporabnikom, ko so nastavljene ciljne vrednosti dosežene.",
+    "air_care_helps": "Air Care želi rešiti inteligentno kontrolo temperature, vlažnosti in zraka v celotni hiši",
+    "air_care_helps_1": "1. Ocena zraka",
+    "air_care_helps_1_content": "Spremljajte stanje temperature in vlažnosti vsake sobe v realnem času ter zagotovite ocene udobja in opomnike glede na klimatsko stanje",
+    "air_care_helps_2": "2.Optimizacija z enim klikom",
+    "air_care_helps_2_content": "Optimizacijo lahko zaženete z enim klikom. Ponujamo pet različnih optimizacijskih shem. Vsak način optimizacije je mogoče prilagoditi glede na potrebe uporabnikov, kar uporabnikom zagotavlja prilagojene rešitve optimizacije.",
+    "air_care_helps_3": "3.3D pogled na sobo",
+    "air_care_helps_3_content": "S podrobno 3D vizualizacijo vašega doma spremljajte stanje vaše sobe in naprav.",
+    "smart_laundry_key": "Pametna pralnica",
+    "smart_laundry_helps": "Smart Laundry ponuja strokovne nasvete za pranje, intuitivnega pomočnika za pranje perila in brezhibno upravljanje detergentov, kar zagotavlja neprimerljivo izkušnjo pranja perila",
+    "smart_laundry_helps_1": "1. Pralnica po meri",
+    "smart_laundry_helps_1_content": "Prilagojeni cikli na podlagi uporabniških profilov in preferenc, z oznakami za različne letne čase, dejavnosti na prostem, nego dojenčkov in več.",
+    "smart_laundry_helps_2": "2. Ravnanje z detergenti",
+    "smart_laundry_helps_2_content": "Optimizirajte svojo rutino pranja perila s programom Smart Home Laundry Assistant, samodejno prepoznajte znamke detergentov in upravljajte doziranje v vašem pralnem stroju.",
+    "smart_laundry_helps_3": "3. Poročilo o uporabi perila",
+    "smart_laundry_helps_3_content": "Prikaže tedenska, mesečna in letna poročila o uporabnikovi uporabi programa za pranje perila ter mesečno porabo vode in elektrike ter čiščenje bobna.",
+    "smart_kitchen_key": "Pametna kuhinja",
+    "smart_kitchen_helps": "Smart Kitchen vam nudi inteligentno kuharsko izkušnjo brez primere, vključno z inteligentnimi recepti, združevanjem vin, pomočniki za recepte ter upravljanjem sestavin, vina in pijače.",
+    "smart_kitchen_helps_1": "1.Chef recept",
+    "smart_kitchen_helps_1_content": "Doživite recepte mojstra v edinstvenih okusih, ko jih kuhate v različnih pečicah, ki sledijo navodilom za kuhanje recepta z enim klikom.",
+    "smart_kitchen_helps_2": "Pomočnik za recepte",
+    "smart_kitchen_helps_2_content": "Prilagodite in ustvarite recepte na podlagi vaših osebnih preferenc, vključno s prehrano, kulinariko, življenjskim slogom in alergijami.",
+    "smart_kitchen_helps_3": "3. Upravljanje s hrano",
+    "smart_kitchen_helps_3_content": "Dodajte in si oglejte podrobnosti o pogosto uporabljenih sestavinah, kot je datum poteka. Hitro povežite ustrezne recepte za hrano in pošljite manjkajoče sestavine na nakupovalni seznam.",
+    "smart_kitchen_helps_4": "Upravljanje s pijačo",
+    "smart_kitchen_helps_4_content": "Dodajte pijače in ustvarite seznam pitja, oglejte si podrobne informacije o vsaki posamezni shranjeni pijači.",
+    "smart_kitchen_helps_5": "Inventar vina",
+    "smart_kitchen_helps_5_content": "Skenirajte, da ustvarite seznam vinskih kleti VIvino, nastavite opomnike za optimalno obdobje pitja in priporočite kombiniranje hrane glede na vrsto vina.",
+    "smart_kitchen_helps_6": "6. Nakupovalni seznam",
+    "smart_kitchen_helps_6_content": "Ustvarite nakupovalni seznam na podlagi recepta, označite predmete, ki jih že imate in ste jih pridobili, kot svojo nakupovalno referenco.",
+    "smart_support_key": "Pametna podpora",
+    "smart_support_helps": "Smart Support zagotavlja celovito pomoč za vaše naprave. Dobite lahko nasvete za čiščenje in nego za vsakodnevno vzdrževanje, samodiagnostiko z enim klikom za preverjanje stanja vseh vaših naprav in zagotovite možne rešitve za kakršna koli neobičajna delovanja",
+    "smart_support_helps_1": "1. Nasveti za čiščenje in vzdrževanje",
+    "smart_support_helps_1_content": "Podajte predloge za dnevno čiščenje in vzdrževanje izdelka.",
+    "smart_support_helps_2": "2. Samodiagnoza z enim klikom",
+    "smart_support_helps_2_content": "Samopregled z enim klikom za razumevanje stanja vseh gospodinjskih aparatov. Ko je zaznana težava, zagotovite priporočene rešitve.",
+    "smart_support_helps_3": "Odpravljanje težav",
+    "smart_support_helps_3_content": "Ko ima naprava težave, si lahko uporabniki sami pomagajo, odpravijo težave in rešijo težavo v skladu z navodili za napake.",
+    "smart_support_helps_4": "4. Prijavite težavo",
+    "smart_support_helps_4_content": "Če pride do težav z APP ali uporabo izdelka, lahko uporabniki pošljejo povratne informacije na spletu, da skrajšajo čas komunikacije s klicnim centrom.",
+    "smart_support_helps_5": "5. Kontaktirajte nas",
+    "smart_support_helps_5_content": "Uporabniki nas lahko kontaktirajo preko telefona, elektronske pošte in uradne spletne strani.",
+    "block_key": "Blokiraj",
+    "guide_tips_device_1": "To je novi zavihek domače strani <b> . </b>",
+    "guide_tips_device_2": "Lahko kliknete \" : \", da uredite vrstni red, ga prikažete ali skrijete.",
+    "guide_tips_device_3": "Kartico lahko dolgo pritisnete, da jo izbrišete ali uredite.",
+    "guide_tips_device_4": "Izkusite lahko <b> kartice scenarijev po meri. </b>",
+    "guide_tips_device_5": "Nastavitev domačega zavihka najdete pri <b> prilagodite videz </b> na strani menija",
+    "guide_tips_1": "ConnectLife je predstavil <b> pet scenarijev. </b>",
+    "guide_tips_2": "Za urejanje vrstnega reda razdelkov lahko kliknete »:«.",
+    "guide_tips_3": "Lahko povlečete »=«, da spremenite vrstni red razdelkov na domači strani.",
+    "c_your_device": "Povežite\nsvoje naprave",
+    "a_ex_new_way": "in izkusite nov način pametnega življenja.",
+    "my_place": "Moje mesto",
+    "home_tab": "Zavihek Domača stran",
+    "home_tab_content": "Prikaži ali skrij zavihek s scenariji na vrhu domače strani",
+    "CL_DV_RF_extras": "Dodatki"
 }
