--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4438,5 +4438,87 @@
     "CL_DV_OV_night_mode_setting_desc": "在预定的夜间时间段降低屏幕和/或灯光的亮度。",
     "CL_DV_OV_door_lock_setting_desc": "打開門鎖將鎖上烤箱門。",
     "CL_CF_FM_one_day_left": "還剩 1 天",
-    "CL_CF_FM_x_item_selected": "*** 已選擇項目"
+    "CL_CF_FM_x_item_selected": "*** 已選擇項目",
+    "CL_SL_CM_progam_send_warning": "抱歉，程式無法傳送，請開啟您的裝置並開啟遙控器並重試。",
+    "CL_SL_CM_progam_start_warning": "抱歉，程式無法啟動，請開啟您的裝置並開啟遙控器並重試。",
+    "CL_SL_CM_progam_sent_successfully": "程式發送成功！",
+    "CL_SL_CM_select_device_desc": "請選擇要使用的設備。",
+    "CL_DV_WM_Detergent_In_Use_key": "使用中的洗滌劑",
+    "CL_DV_RF_cleaning_mode": "清潔模式",
+    "CL_DV_RF_holiday_mode": "假期模式",
+    "CL_DV_RF_party_mode": "派對模式",
+    "w_i_connect_scenario": "ConnectLife 場景是什麼",
+    "w_i_smart_energy": "什麼是智慧能源",
+    "smart_energy_l_m": "了解有關智慧能源主要功能的更多信息",
+    "w_i_air_care": "什麼是空氣護理",
+    "air_care_l_m": "了解有關 Air Care 主要功能的更多信息",
+    "w_i_smart_laundry": "什麼是智慧洗衣",
+    "smart_laundry_l_m": "了解有關智慧洗衣的主要功能的更多信息",
+    "w_i_smart_kitchen": "什麼是智慧廚房",
+    "smart_kitchen_l_m": "了解有關智慧廚房主要功能的更多信息",
+    "w_i_smart_support": "什麼是智能支援",
+    "smart_support_l_m": "了解有關智能支援主要功能的更多信息",
+    "smart_energy_helps": "智慧能源幫助您監控設備並使其保持在節能狀態",
+    "smart_energy_helps_1": "1.一鍵生態",
+    "smart_energy_helps_1_content": "您的電器處於主動 ECO 模式。統計分析設備能耗。監控節能數據並設定能源使用目標。",
+    "smart_energy_helps_2": "2.能耗監測",
+    "smart_energy_helps_2_content": "以日、月、年計算全屋用電量和用水量。還可以查看單一設備的能耗統計、選定時間內各設備的能耗佔比、整體能耗和單一能耗。",
+    "smart_energy_helps_3": "3.能源助手",
+    "smart_energy_helps_3_content": "設定節能目標，並在達到設定的目標值時向使用者發送通知。",
+    "air_care_helps": "空氣護理旨在解決全屋溫度、濕度、空氣的智慧控制",
+    "air_care_helps_1": "1.空氣評價",
+    "air_care_helps_1_content": "即時監控每個房間的溫濕度狀態，並根據空調狀況提供舒適度評估和提醒",
+    "air_care_helps_2": "2.一鍵優化",
+    "air_care_helps_2_content": "一鍵啟動優化。我們提供五種不同的優化方案。每種最佳化模式都可以依照使用者需求進行調整，為使用者提供客製化的最佳化方案。",
+    "air_care_helps_3": "3.3D房間視圖",
+    "air_care_helps_3_content": "透過您家的詳細 3D 視覺化，密切注意您房間的狀態和電器。",
+    "smart_laundry_key": "智慧洗衣",
+    "smart_laundry_helps": "Smart Laundry 提供專業的洗滌技巧、直覺的洗衣助理和無縫的洗滌劑管理，確保無與倫比的洗衣體驗",
+    "smart_laundry_helps_1": "1.訂製洗衣房",
+    "smart_laundry_helps_1_content": "基於使用者個人資料和偏好的個人化週期，帶有不同季節、戶外活動、嬰兒護理等標籤。",
+    "smart_laundry_helps_2": "2.洗滌劑管理",
+    "smart_laundry_helps_2_content": "使用智慧家庭洗衣助理優化您的洗衣程序，自動識別洗滌劑品牌並管理洗衣機中的劑量。",
+    "smart_laundry_helps_3": "3.洗衣房使用報告",
+    "smart_laundry_helps_3_content": "顯示有​​關使用者使用洗衣程序的每週、每月和每年的報告，以及每月的水電使用情況和滾筒清潔。",
+    "smart_kitchen_key": "智慧廚房",
+    "smart_kitchen_helps": "智慧廚房為您提供前所未有的智慧烹飪體驗，包括智慧食譜、酒水搭配、食譜助理以及食材、酒水管理",
+    "smart_kitchen_helps_1": "1.主廚食譜",
+    "smart_kitchen_helps_1_content": "體驗大師食譜在不同烤箱中烹飪時的獨特風味，只需一鍵點擊即可遵循食譜的烹飪說明。",
+    "smart_kitchen_helps_2": "2.食譜助手",
+    "smart_kitchen_helps_2_content": "根據您的個人喜好（包括營養、美食、生活方式和過敏）客製化並產生食譜。",
+    "smart_kitchen_helps_3": "3.食品管理",
+    "smart_kitchen_helps_3_content": "添加並查看常用成分詳細信息，例如失效日期。快速匹配合適的食品食譜並將缺少的成分發送到購物清單。",
+    "smart_kitchen_helps_4": "飲料管理",
+    "smart_kitchen_helps_4_content": "添加飲品並建立飲品清單，查看每份儲存的飲品的詳細資訊。",
+    "smart_kitchen_helps_5": "酒品庫存",
+    "smart_kitchen_helps_5_content": "掃描即可透過 VIvino 建立酒窖清單，設定最佳飲酒時間提醒，並根據葡萄酒類型推薦食物搭配。",
+    "smart_kitchen_helps_6": "6.購物清單",
+    "smart_kitchen_helps_6_content": "根據食譜產生購物清單，將您已經擁有和購買的物品標記為您的購物參考。",
+    "smart_support_key": "智慧支援",
+    "smart_support_helps": "智慧支援為您的設備提供全面的幫助。您可以獲得日常維護的清潔和護理提示，一鍵自診斷檢查所有設備的狀態並為任何異常操作提供可能的解決方案",
+    "smart_support_helps_1": "1.清潔保養技巧",
+    "smart_support_helps_1_content": "給予產品日常清潔和維護的建議。",
+    "smart_support_helps_2": "2.一鍵自我診斷",
+    "smart_support_helps_2_content": "一鍵自檢，掌握所有家電狀態。當發現問題時，提供建議的解決方案。",
+    "smart_support_helps_3": "疑难解答",
+    "smart_support_helps_3_content": "當設備出現問題時，使用者可以根據故障指南進行自助、檢查、解決問題。",
+    "smart_support_helps_4": "4.報告問題",
+    "smart_support_helps_4_content": "如果APP或產品使用出現問題，使用者可以在線上回饋，減少與呼叫中心的溝通時間。",
+    "smart_support_helps_5": "5.聯絡我們",
+    "smart_support_helps_5_content": "用戶可以透過電話、電子郵件、官方網站與我們聯繫。",
+    "block_key": "堵塞",
+    "guide_tips_device_1": "這是<b>新主頁選項卡。 </b>",
+    "guide_tips_device_2": "您可以點選「：」來編輯訂單、顯示或隱藏。",
+    "guide_tips_device_3": "您可以長按卡片進行刪除或編輯。",
+    "guide_tips_device_4": "您可以體驗<b>客製化的場景卡。 </b>",
+    "guide_tips_device_5": "您可以在選單頁面的<b>自訂外觀</b>中找到主頁選項卡設置",
+    "guide_tips_1": "ConnectLife 推出了<b>五個場景。 </b>",
+    "guide_tips_2": "您可以按一下「：」來編輯部分的順序",
+    "guide_tips_3": "您可以拖曳“=”來更改主頁上各部分的順序。",
+    "c_your_device": "连接\n你的设备",
+    "a_ex_new_way": "体验全新的智慧生活",
+    "my_place": "我的地方",
+    "home_tab": "主頁選項卡",
+    "home_tab_content": "顯示或隱藏主頁頂部的場景標籤",
+    "CL_DV_RF_extras": "額外的"
 }
